# Contractus

./: .gitignore  Cargo.toml  LICENSE  README.md
.cargo/: config.toml
.kiro/specs/programming-language/: design.md  requirements.md  tasks.md
examples/: for_loop_demo.ctx  hello.ctx  struct_demo.ctx  test.ctx  tmp.ctx
src/: ast.rs  lexer.rs  lib.rs  main.rs  parser.rs  span.rs  token.rs
tests/: closure_test.rs  complex_types_test.rs  edge_cases_test.rs  error_handling_test.rs  for_loop_test.rs  integration_test.rs  lexer_edge_cases.rs  lexer_integration_tests.rs  lexer_test.rs  lexer_tests.rs  match_test.rs  parser_test.rs  performance_test.rs
