[package]
name = "contractus"
version = "0.1.0"
edition = "2021"
authors = ["Contractus Team"]
description = "Contractus programming language compiler - A modern systems programming language"
license = "MIT"
repository = "https://github.com/your-username/contractus"
keywords = ["compiler", "programming-language", "systems", "self-hosting"]
categories = ["compilers", "development-tools"]

[lib]
name = "contractus"
path = "src/lib.rs"

[[bin]]
name = "contractus"
path = "src/main.rs"

[dependencies]
# 暂时不加任何依赖，纯手写实现

[dev-dependencies]
# 用于快照测试（未来可能需要）
# insta = "1.31"
