[package]
name = "contractus"
version = "0.1.0"
edition = "2021"
authors = ["haiman1024 <alexredskaber@gmail.com>"]
description = "Contractus programming language compiler - A modern systems programming language"
license = "MIT"
repository = "https://github.com/haiman1024/contractus"
keywords = ["compiler", "programming-language", "systems", "self-hosting"]
categories = ["compilers", "development-tools"]

[lib]
name = "contractus"
path = "src/lib.rs"

[[bin]]
name = "contractus"
path = "src/main.rs"

[dependencies]
# 暂时不加任何依赖，纯手写实现

[dev-dependencies]
# 未来可能用于快照测试